--- a/assets/css/buddypress.css
+++ b/assets/css/buddypress.css
@@ -186,6 +186,7 @@ button#mpp-edit-media-submit,
 #bupr_save_review,
 button.friendship-button,
 button.group-button,
+.buddypress-wrap .members-list li .member-button-wrap .generic-button button,
 .avatar-history-actions button.avatar-history-action.recycle,
 .avatar-history-actions button.avatar-history-action.delete,
 .avatar-history-actions button.recycle.disabled,
