--- a/assets/css/platform.css
+++ b/assets/css/platform.css
@@ -735,7 +735,15 @@ body.round-avatars .buddypress-wrap ul.bp-list.groups-dir-list.grid.bb-cover-ena
 /*--------------------------------------------------------------
 # Member Single
 --------------------------------------------------------------*/
+#cover-image-container {
+    height: auto;
+}
+
 #buddypress #header-cover-image.cover-small {
+    height: 225px;
+}
+
+#buddypress #header-cover-image.cover-large {
     height: 300px;
 }
 
@@ -927,6 +935,36 @@ body .select2-container .select2-dropdown.bb-compose-input .avatar {
     border-radius: 50%;
     display: inline;
     vertical-align: middle;
+}
+
+/* Notification Settings */
+h2.screen-heading.email-settings-screen {
+    margin-top: 20px;
+}
+
+.subnav_tab .subnav li a {
+    padding: 10px;
+    display: inline-block;
+}
+
+.main-notification-settings tbody .notification_heading td {
+    padding: 10px;
+}
+
+.main-notification-settings tbody td:first-child {
+    padding-left: 10px;
+}
+
+.main-notification-settings .bb-mobile-setting.active ul {
+    text-align: left;
+}
+
+.main-notification-settings .bb-mobile-setting.active ul li label {
+    margin-top: 0;
+}
+
+.main-notification-settings .bb-mobile-setting ul li:first-child {
+    padding-top: 15px;
 }
 
 /*--------------------------------------------------------------
