--- a/assets/css/_typography.css
+++ b/assets/css/_typography.css
@@ -33,6 +33,7 @@ h6 {
     margin-bottom: 1rem;
     color: var(--color-link);
     line-height: 1.4;
+    font-weight: inherit;
     clear: both;
 }
 
