--- a/assets/css/editor/editor-styles.css
+++ b/assets/css/editor/editor-styles.css
@@ -28,65 +28,137 @@
 button,
 select,
 option {
-	color: inherit;
-	font-family: inherit;
-	font-size: inherit;
-	line-height: inherit;
-	border-radius: inherit;
+    color: inherit;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    border-radius: inherit;
 }
 
 .editor-post-title__input {
-	font-size: 2.5rem;
-	line-height: 1.4;
-	margin-top: 0;
-	margin-bottom: 0;
+    font-size: 2.5rem;
+    line-height: 1.4;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 .gallery .gallery-item,
 .wp-block-freeform .gallery .gallery-item {
-	width: auto;
+    width: auto;
 }
 
 /* Main column width */
 .wp-block {
-	max-width: calc(45rem + 30px);
+    max-width: calc(45rem + 30px);
 }
 
 /* Width of "wide" blocks */
 .wp-block[data-align="wide"] {
-	max-width: calc(50% + 45rem / 2 + 76px);
+    max-width: calc(50% + 45rem / 2 + 76px);
 }
 
 /* Width of "full-wide" blocks */
 .wp-block[data-align="full"] {
-	max-width: none;
+    max-width: none;
 }
 
 .wp-block-cover h2,
 .wp-block-cover h3,
 .wp-block-cover h4 {
-	color: inherit;
+    color: inherit;
 }
 
 .wp-block-cover .wp-block-cover-text {
-	font-size: 2em;
-	line-height: 1.25;
+    font-size: 2em;
+    line-height: 1.25;
 }
 
 .wp-block-archives,
 .wp-block-categories__list,
 .wp-block-latest-posts,
 .wp-block-latest-comments {
-	margin-left: auto;
-	margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .wp-block-latest-comments {
-	padding-left: 2.5em;
-	padding-right: 2.5em;
+    padding-left: 2.5em;
+    padding-right: 2.5em;
 }
 
 .wp-block-image.is-style-buddyx-border img {
-    border: 2px solid var(--color-theme-primary); /* Adjust the border properties as needed */
-    border-radius: 5px; /* Optional: Add border-radius for rounded corners */
+    border: 2px solid var(--color-theme-primary);
+    /* Adjust the border properties as needed */
+    border-radius: 5px;
+    /* Optional: Add border-radius for rounded corners */
+}
+
+.editor-styles-wrapper {
+    background-color: #ffffff;
+    color: #505050;
+    font-family: "Open Sans", -apple-system, blinkmacsystemfont, "segoe ui", roboto, "oxygen-sans", ubuntu, cantarell, "helvetica neue", helvetica, arial, sans-serif;
+    line-height: 1.8;
+    word-wrap: break-word;
+}
+
+.editor-styles-wrapper>* {
+    color: #505050;
+    font-family: "Open Sans", -apple-system, blinkmacsystemfont, "segoe ui", roboto, "oxygen-sans", ubuntu, cantarell, "helvetica neue", helvetica, arial, sans-serif;
+}
+
+.editor-styles-wrapper h1,
+.editor-styles-wrapper h2,
+.editor-styles-wrapper h3,
+.editor-styles-wrapper h4,
+.editor-styles-wrapper h5,
+.editor-styles-wrapper h6 {
+    color: #111111;
+    line-height: 1.3;
+    margin: 0 0 20px;
+}
+
+.editor-styles-wrapper h1.editor-post-title__input {
+    margin-bottom: 20px;
+}
+
+/* Buttons */
+.wp-element-button,
+.wp-block-button__link {
+    font-family: inherit;
+    font-size: inherit;
+    color: var(--button-text-color);
+    background-color: var(--button-background-color);
+    border-radius: var(--button-border-radius);
+    padding: 10px 20px;
+    font-weight: 500;
+    font-style: normal;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    display: inline-block;
+    line-height: 1.3;
+    border: 1px solid var(--button-border-color);
+    outline: 0;
+    vertical-align: middle;
+    -webkit-appearance: none;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-transition: all linear .2s;
+    transition: all linear .2s;
+}
+
+.wp-element-button:hover,
+.wp-block-button__link:hover {
+    color: var(--button-text-hover-color);
+    background-color: var(--button-background-hover-color);
+    border: 1px solid var(--button-border-hover-color);
+}
+
+.wp-block-button.is-style-outline .wp-block-button__link:not(.has-background) {
+    background-color: transparent;
+    background-image: none;
+}
+
+.wp-block-button.is-style-outline .wp-block-button__link:not(.has-text-color) {
+    color: currentColor;
 }
